-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13, 14
-
Component/s: hotspot
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8343845 | 11.0.26 | Sendao Yan | P4 | Resolved | Fixed | b01 |
Test
compiler/c1/TestLinearScanOrderMain.java
time out intemittently.
compiler/c1/TestLinearScanOrderMain.java
time out intemittently.
- backported by
-
JDK-8343845 Inefficiencies in CodeStrings::add_comment cause timeouts
-
- Resolved
-
- relates to
-
JDK-8207355 C1 compilation hangs in ComputeLinearScanOrder::compute_dominator
-
- Closed
-
-
JDK-8231058 VerifyOops crashes with assert(_offset >= 0) failed: offset for non comment?
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk11u-dev/96805ae9
-
Review(master)
openjdk/jdk11u-dev/2951