8224624: Inefficiencies in CodeStrings::add_comment cause timeouts

Changing CodeStrings to a doubly-linked-list and searching for the comment with the right offset in reverse.

Reviewed-by: kvn